--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <body>
 <div class="winamp">
   <div class="winamp_player">
-    <div class="player_title">
+    <div class="player_title title_wrapper">
       <div class="logo"></div>
-      <div class="player_title_text">winamp</div>
+      <div class="player_text title_text">winamp</div>
       <div class="btn_wrapper">
         <button class="minimise"></button>
         <button class="minimise"></button>
         <button class="close"></button>
       </div>
     </div>
-    <div class="player_main">
+    <div class="player_main section_wrapper">
       <div class="player_section_head">
         <div class="player_display">
           <div class="display_header">
@@ -49,7 +49,7 @@
             </div>
           </div>
           <div class="header_music_controls">
-            <input type="range" class="volume" min="-100" max="0" value="-50" step="1">
+            <input type="range" class="volume" min="-100" max="-50" value="-25" step="0.5">
             <input type="range" class="changeSide" min="-1" max="1" value="0" step="0.1">
             <button class="btn_toggle_eq"></button>
             <button class="btn_toggle_pl"></button>
@@ -82,10 +82,61 @@
     </div>
 
   </div>
-  <div class="winamp_equalizer"></div>
+  <div class="winamp_equalizer">
+    <div class="equalizer_title title_wrapper">
+      <div class="equalizer_text title_text">winamp equalizer</div>
+      <div class="btn_wrapper">
+        <button class="minimise"></button>
+        <button class="close"></button>
+      </div>
+    </div>
+    <div class="equalizer_wrapper section_wrapper">
+      <div class="equalizer_header">
+        <div class="btnsEqualizer">
+          <button class="btn_on"></button>
+          <button class="btn_auto"></button>
+        </div>
+        <div class="equalizer_line"><canvas id="canvas"></canvas></div>
+        <div class="equalizer_presets">
+          <button class="btn_presets"></button>
+        </div>
+      </div>
+      <div class="equalizer_main">
+        <div class="eq_item_wrapper">&#8403;</div>
+        <input type="range" id="preamp" class="equalizer_filter" >
+        <div class="eq_item_wrapper">&#8403;</div>
+        <div class="labelDB">
+          <span name="12">+12db</span>
+          <span name="0">+0db</span>
+          <span name="-12">-12db</span>
+        </div>
+        <div class="eq_item_wrapper">&#8403;</div>
+        <input type="range" min="-12" max="12" value="0" step="0.1" class="equalizer_filter freq">
+          <div class="eq_item_wrapper">&#8403;</div>
+        <input type="range" min="-12" max="12" value="0" step="0.1" class="equalizer_filter freq">
+          <div class="eq_item_wrapper">&#8403;</div>
+        <input type="range" min="-12" max="12" value="0" step="0.1" class="equalizer_filter freq">
+          <div class="eq_item_wrapper">&#8403;</div>
+        <input type="range" min="-12" max="12" value="0" step="0.1" class="equalizer_filter freq">
+          <div class="eq_item_wrapper">&#8403;</div>
+        <input type="range" min="-12" max="12" value="0" step="0.1" class="equalizer_filter freq">
+          <div class="eq_item_wrapper">&#8403;</div>
+        <input type="range" min="-12" max="12" value="0" step="0.1" class="equalizer_filter freq">
+          <div class="eq_item_wrapper">&#8403;</div>
+        <input type="range" min="-12" max="12" value="0" step="0.1" class="equalizer_filter freq">
+          <div class="eq_item_wrapper">&#8403;</div>
+        <input type="range" min="-12" max="12" value="0" step="0.1" class="equalizer_filter freq">
+          <div class="eq_item_wrapper">&#8403;</div>
+        <input type="range" min="-12" max="12" value="0" step="0.1" class="equalizer_filter freq">
+          <div class="eq_item_wrapper">&#8403;</div>
+        <input type="range" min="-12" max="12" value="0" step="0.1" class="equalizer_filter freq">
+          <div class="eq_item_wrapper">&#8403;</div>
+      </div>
+    </div>
+  </div>
   <div class="winamp_playlist">
-    <div class="playlist_title">
-      <div class="playlist_title_text">winamp playlist</div>
+    <div class="playlist_title title_wrapper">
+      <div class="playlist_text title_text">winamp playlist</div>
       <div class="btn_wrapper">
         <button class="minimise"></button>
         <button class="close"></button>
@@ -123,5 +174,6 @@
     </div>
   </div>
 </div>
+<div class="block-info"></div>
 </body>
 </html>
