--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             </div>
             <div class="display_time"></div>
           </div>
+          <div class="display_freqVisual">
+            <canvas class="canvas_freq"></canvas></div>
         </div>
         <div class="player_main_controls">
           <div class="header_music_bar"><span class="musicBarScroll"></span></div>
