added equalizer on/off mode

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="equalizer_wrapper section_wrapper">
       <div class="equalizer_header">
         <div class="btnsEqualizer">
-          <button class="btn_on"></button>
+          <button class="btn_equalizer"></button>
           <button class="btn_auto"></button>
         </div>
         <div class="equalizer_line"><canvas id="canvas"></canvas></div>
