--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
   <title>Document</title>
 </head>
 <body>
-<div class="winamp">
-  <div class="winamp_player">
-    <div class="player_title title_wrapper">
+  <div class="winamp_label">
+    <img class="icon" src="./img/icon.png" alt="icon">
+    <span class="icon_label">Winamp</span>
+  </div>
+<div class="winamp display_none">
+  <div class="winamp_player drag">
+    <div id="player_title" class="title_wrapper">
       <div class="logo"></div>
       <div class="player_text title_text">winamp</div>
       <div class="btn_wrapper">
         <button class="minimise"></button>
         <button class="minimise"></button>
-        <button class="close"></button>
+        <button id="closePlayer" class="close"></button>
       </div>
     </div>
     <div class="player_main section_wrapper">
@@ -30,7 +34,7 @@
             <div class="player_state">
                 <div class="fa fa-stop"></div>
             </div>
-            <div class="display_time"></div>
+            <div class="display_time">:</div>
           </div>
           <div class="display_freqVisual">
             <canvas id="canvas_freq"></canvas></div>
@@ -85,8 +89,8 @@
     </div>
 
   </div>
-  <div class="winamp_equalizer">
-    <div class="equalizer_title title_wrapper">
+  <div class="winamp_equalizer drag">
+    <div id="equalizer_title" class="title_wrapper">
       <div class="equalizer_text title_text">winamp equalizer</div>
       <div class="btn_wrapper">
         <button class="minimise"></button>
@@ -102,7 +106,7 @@
         <div class="equalizer_line"><canvas id="canvas"></canvas></div>
         <div class="equalizer_pressets">
           <button class="btn_pressets"></button>
-          <ul class="pressets display_item">
+          <ul class="pressets display_none">
           </ul>
         </div>
       </div>
@@ -139,8 +143,8 @@
       </div>
     </div>
   </div>
-  <div class="winamp_playlist">
-    <div class="playlist_title title_wrapper">
+  <div class="winamp_playlist drag">
+    <div id="playlist_title" class="title_wrapper">
       <div class="playlist_text title_text">winamp playlist</div>
       <div class="btn_wrapper">
         <button class="minimise"></button>
