--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/icon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/icon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./img/icon/favicon-16x16.png">
+  <link rel="manifest" href="./img/icon/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
   <script defer src="./main.js"></script>
   <script defer src="./additional.js"></script>
   <link rel="stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-  <title>Document</title>
+  <title>WINAMP</title>
 </head>
 <body>
   <div class="winamp_label">
