--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
           </div>
           <div class="header_music_controls">
-            <input type="range" class="volume" min="-100" max="-50" value="-75" step="0.5">
+            <input type="range" class="volume" min="-100" max="-75" value="-25" step="0.5">
             <input type="range" class="changeSide" min="-1" max="1" value="0" step="0.1">
             <button class="btn_toggle_eq"></button>
             <button class="btn_toggle_pl"></button>
@@ -189,5 +189,12 @@
     </div>
   </div>
 </div>
+<footer class="footer">
+  <span>Developed by Vadim Kolomiets</span>
+  <nav>
+    <a target="_blank" href="https://www.linkedin.com/in/vadim-kolomiets-704b2718b/" class="link fab fa-linkedin"></a>
+    <a target="_blank" href="https://github.com/free3xm" class="link fab fa-github-square"></a>
+  </nav>
+</footer>
 </body>
 </html>
