--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
         <input type="range" id="preamp" class="equalizer_filter" >
         <div class="eq_item_wrapper">&#8403;</div>
         <div class="labelDB">
-          <span name="12">+12db</span>
-          <span name="0">+0db</span>
-          <span name="-12">-12db</span>
+          <span data-name="12">+12db</span>
+          <span data-name="0">+0db</span>
+          <span data-name="-12">-12db</span>
         </div>
         <div class="eq_item_wrapper">&#8403;</div>
         <input type="range" min="-12" max="12" value="0" step="0.1" class="equalizer_filter freq">
