added eq frequency label

--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
         </div>
       </div>
     </div>
-
   </div>
   <div class="winamp_equalizer drag">
     <div id="equalizer_title" class="title_wrapper">
@@ -146,6 +145,21 @@
           <div class="eq_item_wrapper">&#8403;</div>
         <input type="range" min="-12" max="12" value="0" step="0.1" class="equalizer_filter freq">
           <div class="eq_item_wrapper">&#8403;</div>
+      </div>
+      <div class="info_eq">
+        <div class="info_eq_item preamp">PREAMP</div>
+        <div class="info_eq_item eq_freq_wrapper">
+          <span>60</span>
+          <span>170</span>
+          <span>310</span>
+          <span>600</span>
+          <span>1K</span>
+          <span>3K</span>
+          <span>6K</span>
+          <span>12K</span>
+          <span>14K</span>
+          <span>16K</span>
+        </div>
       </div>
     </div>
   </div>
